--- a/Index.html
+++ b/Index.html
@@ -5,13 +5,45 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mariet´s web supercool</title>
+
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="/CSS/style.css">
+    
 </head>
-<body>
-<h1>💩 Portfolio de Mariet</h1>
-<p>Diseños super chulis</p>
-<h2>
-    Pincha <a href="/portfolio.html">aquí</a> para ver mis super diseños
-</h2>
-<img src="/5f9a0c9597843.jpeg" alt="el puzzle de leo">
+<body style="background-color: slateblue;">
+    <!-- Foto y nombre -->
+    <table>
+        <tr>
+            <td>
+                <img width="200px" style="border-radius: 100px; margin-right: 56px;" src="/5f9a0c9597843.jpeg" alt="el puzzle de leo">
+            </td>
+             <td>
+            <h1>💩 Portfolio de Mariet</h1>
+            <p>Diseños super chulis</p>
+            <h2>
+                Pincha <a href="/portfolio.html">aquí</a> para ver mis super diseños
+            </h2>
+            </td>
+        </tr>
+    </table>
+    <!-- Comando shift 7 -->
+
+    <hr size="8" style="width:300px; color: aquamarine;">
+
+    <h3>Cosas que sé hacer</h3>
+    <ol>
+        <li>hacer café</li>
+        <li>hacer bizcocho</li>
+        <li><strike>wow</strike></li>
+    </ol>
+
+    <hr size="8" style="width: 200px;">
+
+    <h3>Cosas que sé hacer</h3>
+    <ol>
+        <li>hacer café</li>
+        <li>hacer bizcocho</li>
+        <li><strike>wow</strike></li>
+    </ol>
 </body>
 </html>
