--- a/portfolio.html
+++ b/portfolio.html
@@ -6,18 +6,54 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    <a href="">patata</a>
-</body>
-<section>
-<h1>El portfolio de Mariet</h1>
-<div>
-    <!-- Este titulo es una mierda -->
-    <h2>Version final</h2>
-</div>
-</section>
-<ul>
-    <li>patata</li>
-    <li>patatas más ricas</li>
-</ul>
+<body style="background-color: turquoise;">
+    <a href="index.html">Volver</a>
+    <h1>cosas que me gustan</h1>
+    <table border="2" width="300px" cellspacing="8" style="background: thistle;">
+        <tr>
+            <th>
+                Cosas que me gustan
+            </th>
+            <th>
+                Cosas que no me gustan
+            </th>
+        </tr>
+        <tr>
+            <td>patata</td>
+            <td>tomates</td>
+            <tr>
+            </tr>
+            <td>mas patatas</td>
+            <td>mas tomates</td>
+        </tr>
+        <tr>
+            <td>berenjenas</td>
+        </tr>
+    </table>
+    <br>
+    <h3>
+        Contact me if you want to say HI!
+    </h3>
+    <form action="">
+        <label for="">Name</label>
+        <input type="text" name="name">
+        <br>
+        <br>
+        <label for="">email</label>
+        <input type="email">
+        <br>
+        <br>
+        <label for="text">Write sth:</label>
+        <br>
+        <br>
+        <textarea name="" id="" cols="30" rows="10"></textarea>
+        <br>
+        <br>
+        <input type="radio">
+        <label for="">Accept T&C</label>
+        <br>
+        <br>
+        <input type="submit" value="Contactar con Mariet">
+    </form>
+    <body>
 </html>
