--- a/Index.html
+++ b/Index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/CSS/style.css">
     
 </head>
-<body style="background-color: slateblue;">
+<body class="gradient-bg">
     <!-- Foto y nombre -->
     <table>
         <tr>
@@ -28,22 +28,46 @@
     </table>
     <!-- Comando shift 7 -->
 
-    <hr size="8" style="width:300px; color: aquamarine;">
+    <hr>
 
     <h3>Cosas que sé hacer</h3>
     <ol>
         <li>hacer café</li>
         <li>hacer bizcocho</li>
-        <li><strike>wow</strike></li>
+        <li class="rojo"><strike>wow</strike></li>
     </ol>
 
-    <hr size="8" style="width: 200px;">
+    <hr>
 
     <h3>Cosas que sé hacer</h3>
     <ol>
         <li>hacer café</li>
-        <li>hacer bizcocho</li>
+        <li id="bizcocho">hacer bizcocho</li>
         <li><strike>wow</strike></li>
     </ol>
+
+    <div class="card">
+        <img src="https://via.placeholder.com/150" alt="">
+        <div class="container">
+            <h4>
+                Elena gradientes personalizados
+            </h4>
+            <p>
+                Tus <span>gradientes</span> <em>personalizados</em>
+            </p>
+        </div>
+    </div>
+
+  <button 
+   class="primary"
+   >
+   Guardar
+  </button>
+
+  <button 
+  class="secondary"
+  >
+  Cancelar</button>
+
 </body>
 </html>
