--- a/Index.html
+++ b/Index.html
@@ -18,7 +18,7 @@
                 <img width="200px" style="border-radius: 100px; margin-right: 56px;" src="/5f9a0c9597843.jpeg" alt="el puzzle de leo">
             </td>
              <td>
-            <h1>💩 Portfolio de Mariet</h1>
+            <h1>💩 Portfolio de Mariet 💩 </h1>
             <p>Diseños super chulis</p>
             <h2>
                 Pincha <a href="/portfolio.html">aquí</a> para ver mis super diseños
@@ -45,7 +45,30 @@
         <li id="bizcocho">hacer bizcocho</li>
         <li><strike>wow</strike></li>
     </ol>
-
+<!-- Tarjetas x 3 -->
+<div class="cardrow">
+    <div class="card">
+        <img src="https://via.placeholder.com/150" alt="">
+        <div class="container">
+            <h4>
+                Elena gradientes personalizados
+            </h4>
+            <p>
+                Tus <span>gradientes</span> <em>personalizados</em>
+            </p>
+        </div>
+    </div>    
+    <div class="card">
+        <img src="https://via.placeholder.com/150" alt="">
+        <div class="container">
+            <h4>
+                Elena gradientes personalizados
+            </h4>
+            <p>
+                Tus <span>gradientes</span> <em>personalizados</em>
+            </p>
+        </div>
+    </div>    
     <div class="card">
         <img src="https://via.placeholder.com/150" alt="">
         <div class="container">
@@ -57,6 +80,7 @@
             </p>
         </div>
     </div>
+</div>
 
   <button 
    class="primary"
