--- a/Index.html
+++ b/Index.html
@@ -1,97 +1,86 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mariet´s web supercool</title>
-
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="/CSS/style.css">
-    
+    <title>Mariet</title>
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- Bootstrap icons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 </head>
-<body class="gradient-bg">
-    <!-- Foto y nombre -->
-    <table>
-        <tr>
-            <td>
-                <img width="200px" style="border-radius: 100px; margin-right: 56px;" src="/5f9a0c9597843.jpeg" alt="el puzzle de leo">
-            </td>
-             <td>
-            <h1>💩 Portfolio de Mariet 💩 </h1>
-            <p>Diseños super chulis</p>
-            <h2>
-                Pincha <a href="/portfolio.html">aquí</a> para ver mis super diseños
-            </h2>
-            </td>
-        </tr>
-    </table>
-    <!-- Comando shift 7 -->
+<body>
+    <header 
+    class="d-flex flex-wrap justify-content-center py-3 px-4 mb-4 border-bottom fixed-top">
+    <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
+        <span class="fs-4">Mariet</span>
+      </a>
 
-    <hr>
+      <ul class="nav nav-pills">
+        <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Home</a></li>
+        <li class="nav-item"><a href="#" class="nav-link">New Arrivals</a></li>
+        <li class="nav-item"><a href="#" class="nav-link">Vintage</a></li>
+        <li class="nav-item"><a href="#" class="nav-link">About</a></li>
+        <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
+      </ul>
+    </header>
 
-    <h3>Cosas que sé hacer</h3>
-    <ol>
-        <li>hacer café</li>
-        <li>hacer bizcocho</li>
-        <li class="rojo"><strike>wow</strike></li>
-    </ol>
+        <!-- Hero -->
+         <div class="px-4 py-5 my-5 text-center">
+            <i class="fs-1 bi bi-yin-yang"></i>
+    <h1 class="display-5 fw-bold">Mariet es así</h1>
+          <div class="col-lg-6 mx-auto">
+        <p class="lead mb-4">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
+        <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+            <button type="button" class="btn btn-primary btn-lg px-4 gap-3">Primary button</button>
+            <button type="button" class="btn btn-outline-secondary btn-lg px-4">Secondary</button>
+      </div>
+          </div>
+         </div>
+         <!-- Hero -->
 
-    <hr>
+         <!-- Features -->
+         <div class="container">
+            <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
+              <div class="feature col">
+                <div class="feature-icon bg-primary bg-gradient">
+                  <svg class="bi" width="1em" height="1em"><use xlink:href="#collection"/></svg>
+                </div>
+                <h2>Garment design</h2>
+                <p>Garment designs by Mariet. Inspo, moodboards, sketchs.</p>
+                <a href="#" class="icon-link">
+                  Call to action
+                  <svg class="bi" width="1em" height="1em"><use xlink:href="#chevron-right"/></svg>
+                </a>
+              </div>
+              <div class="feature col">
+                <div class="feature-icon bg-primary bg-gradient">
+                  <svg class="bi" width="1em" height="1em"><use xlink:href="#people-circle"/></svg>
+                </div>
+                <h2>Accessories design</h2>
+                <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
+                <a href="#" class="icon-link">
+                  Call to action
+                  <svg class="bi" width="1em" height="1em"><use xlink:href="#chevron-right"/></svg>
+                </a>
+              </div>
+              <div class="feature col">
+                <div class="feature-icon bg-primary bg-gradient">
+                  <svg class="bi" width="1em" height="1em"><use xlink:href="#toggles2"/></svg>
+                </div>
+                <h2>Stylist</h2>
+                <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
+                <a href="#" class="icon-link">
+                  Call to action
+                  <svg class="bi" width="1em" height="1em"><use xlink:href="#chevron-right"/></svg>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- Features -->
 
-    <h3>Cosas que sé hacer</h3>
-    <ol>
-        <li>hacer café</li>
-        <li id="bizcocho">hacer bizcocho</li>
-        <li><strike>wow</strike></li>
-    </ol>
-<!-- Tarjetas x 3 -->
-<div class="cardrow">
-    <div class="card">
-        <img src="https://via.placeholder.com/150" alt="">
-        <div class="container">
-            <h4>
-                Elena gradientes personalizados
-            </h4>
-            <p>
-                Tus <span>gradientes</span> <em>personalizados</em>
-            </p>
-        </div>
-    </div>    
-    <div class="card">
-        <img src="https://via.placeholder.com/150" alt="">
-        <div class="container">
-            <h4>
-                Elena gradientes personalizados
-            </h4>
-            <p>
-                Tus <span>gradientes</span> <em>personalizados</em>
-            </p>
-        </div>
-    </div>    
-    <div class="card">
-        <img src="https://via.placeholder.com/150" alt="">
-        <div class="container">
-            <h4>
-                Elena gradientes personalizados
-            </h4>
-            <p>
-                Tus <span>gradientes</span> <em>personalizados</em>
-            </p>
-        </div>
-    </div>
-</div>
 
-  <button 
-   class="primary"
-   >
-   Guardar
-  </button>
-
-  <button 
-  class="secondary"
-  >
-  Cancelar</button>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
