--- a/Index.html
+++ b/Index.html
@@ -9,8 +9,15 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- Bootstrap icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+    <!-- Link para enganchar CSS a Index -->
+    <link rel="stylesheet" href="/CSS/style.css">
 </head>
+
+<!-- Botón de Pay me. Hay que enganchar el CSS a Index. Añadir link con /CSS y archivo style (línea anterior) -->
 <body>
+    <button type="button" class="btn btn-danger fab">
+      <a href="tlf: 645787676">Pay Me</a>
+    </button>
     <header 
     class="d-flex flex-wrap justify-content-center py-3 px-4 mb-4 border-bottom fixed-top">
     <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
