--- a/Index.html
+++ b/Index.html
@@ -19,7 +19,7 @@
       <a href="tlf: 645787676">Pay Me</a>
     </button>
     <header 
-    class="d-flex flex-wrap justify-content-center py-3 px-4 mb-4 border-bottom fixed-top">
+    class="d-flex flex-wrap justify-content-center py-3 px-4 mb-4 border-bottom fixed-top bg-light">
     <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
         <span class="fs-4">Mariet</span>
       </a>
