--- a/Index.html
+++ b/Index.html
@@ -11,6 +11,16 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <!-- Link para enganchar CSS a Index -->
     <link rel="stylesheet" href="/CSS/style.css">
+
+  <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,400;0,600;0,800;1,900&display=swap" rel="stylesheet">
+
+  <!-- Icons -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
+
 </head>
 
 <!-- Botón de Pay me. Hay que enganchar el CSS a Index. Añadir link con /CSS y archivo style (línea anterior) -->
@@ -36,11 +46,14 @@
         <!-- Hero -->
          <div class="px-4 py-5 my-5 text-center">
             <i class="fs-1 bi bi-yin-yang"></i>
-    <h1 class="display-5 fw-bold">Mariet es así</h1>
+    <h1 class="display-5 fw-bold">Mariet <mark>es así</mark></h1>
           <div class="col-lg-6 mx-auto">
         <p class="lead mb-4">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
         <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-            <button type="button" class="btn btn-primary btn-lg px-4 gap-3">Primary button</button>
+            <button type="button" class="btn btn-primary btn-lg px-4 gap-3 d-flex align-items-center">
+              <span class="material-icons md-24">face</span>
+              <span>Primary button</span>
+            </button>
             <button type="button" class="btn btn-outline-secondary btn-lg px-4">Secondary</button>
       </div>
           </div>
@@ -85,6 +98,19 @@
               </div>
             </div>
           </div>
+
+          <!-- Footer -->
+          <footer class="py-3 my-4">
+            <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+              <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
+              <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Features</a></li>
+              <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Pricing</a></li>
+              <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
+              <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About</a></li>
+            </ul>
+            <p class="text-center text-muted">&copy; 2021 Company, Inc</p>
+          </footer>
+          
           <!-- Features -->
 
 
