--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
       <!-- END NAVBAR -->
 
       <!-- BODY -->
-      <div class="container">
+      <!-- <div class="container">
         <p style="height: 200px; background-color: red;">this is me, then.</p>
         <div class="row align-items-start">
             <div class="col-2 text-center">
@@ -50,6 +50,19 @@
               One of three columns
             </div>
           </div>
+      </div> -->
+
+      <div class="container">
+        <div class="row align-items-center"></div>
+        
+        <div class="col-6 d-flex flex-column justify-content-center" style="background-color: red;">
+          <h1 class="text-center">Acerca de mi</h1>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. </p>
+        </div>
+
+        <div class="col-6 d-flex justify-content-center" style="background-color: salmon;">
+          <img src="htpps://via.placeholder.com/150x350" class="img-fluid" alt="">
+        </div>
       </div>
 
       <hr size="3">
