--- a/Index.html
+++ b/Index.html
@@ -28,6 +28,7 @@
     <button type="button" class="btn btn-danger fab">
       <a href="tlf: 645787676">Pay Me</a>
     </button>
+    <!-- HEADER -->
     <header 
     class="d-flex flex-wrap justify-content-center py-3 px-4 mb-4 border-bottom fixed-top bg-light">
     <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
@@ -35,7 +36,7 @@
       </a>
 
       <ul class="nav nav-pills">
-        <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Home</a></li>
+        <li class="nav-item"><a href="#hero" class="nav-link active" aria-current="page">Hero</a></li>
         <li class="nav-item"><a href="#" class="nav-link">New Arrivals</a></li>
         <li class="nav-item"><a href="#" class="nav-link">Vintage</a></li>
         <li class="nav-item"><a href="#" class="nav-link">About</a></li>
@@ -48,7 +49,7 @@
             <i class="fs-1 bi bi-yin-yang"></i>
     <h1 class="display-5 fw-bold">Mariet <mark>es así</mark></h1>
           <div class="col-lg-6 mx-auto">
-        <p class="lead mb-4">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
+        <p class="lead mb-4"> Welcome to my world :)</p>
         <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
             <button type="button" class="btn btn-primary btn-lg px-4 gap-3 d-flex align-items-center">
               <span class="material-icons md-24">face</span>
@@ -98,6 +99,23 @@
               </div>
             </div>
           </div>
+
+          <!-- Hero -->
+         <div id="hero" class="px-4 py-5 my-5 text-center">
+          <i class="fs-1 bi bi-yin-yang"></i>
+         <h1 class="display-5 fw-bold">Mariet <mark>es así</mark></h1>
+          <div class="col-lg-6 mx-auto">
+         <p class="lead mb-4">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
+         <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+          <button type="button" class="btn btn-primary btn-lg px-4 gap-3 d-flex align-items-center">
+            <span class="material-icons md-24">face</span>
+            <span>Primary button</span>
+          </button>
+          <button type="button" class="btn btn-outline-secondary btn-lg px-4">Secondary</button>
+    </div>
+        </div>
+         </div>
+          <!-- Hero -->
 
           <!-- Footer -->
           <footer class="py-3 my-4">
